--- a/main.css
+++ b/main.css
@@ -151,7 +151,6 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-
 }
 
 input[type="search"]::-ms-clear { /* нестандартный псевдоэлемент IE */ 
@@ -171,6 +170,7 @@ input[type="search"]::-webkit-search-cancel-button { /* нестандартны
   border-radius: 12px;
   color:#944747;
 }
+
 .registration:hover{
 color:white;
 background-color:#944747
@@ -178,4 +178,103 @@ background-color:#944747
 
 .card_position{
   padding-left:120px;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.6);
+    z-index: 1000;
+}
+.modal .modal_content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    z-index: 99999;
+}
+.modal .modal_content .close_modal_window {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.cansel{
+  width: 24px;
+  height: 24px;
+}
+.modal_window{
+  background-color:red;
+}
+.card{
+  text-align: center;
+  color:#944747;
+}
+
+.type_of_doctor{
+  width: 120px;
+  height: 40px;
+}
+.visit_position{
+  text-align: center;
+  color:#944747;
+
+}
+#last_visit{
+  width:210px;
+  background-color:#CB9696;
+  justify-content: center;
+  display: block;
+  margin-top:20px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px;
+  color:#944747;
+}
+#type_of_doctor{
+  width:220px;
+  background-color:#CB9696;
+  justify-content: center;
+  display: block;
+  font-size: 20px;
+  color:#944747;
+}
+#type_of_priority{
+  width:220px;
+  background-color:#CB9696;
+  justify-content: center;
+  display: block;
+  font-size: 20px;
+  color:#944747;
+}
+#button_send{
+  width:100px;
+  background-color:#CB9696;
+  justify-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px;
+  color:#944747;
+  padding:10px;
+  border-radius: 10px;
+}
+
+.cards_style{
+  border:2px solid white;
+  background-color:#CB9696 ;
+  width: 400px;
+  height: auto;
+  color:#944747;
+  border-radius: 12px;
+  padding:8px;
+  margin: auto;
+
 }
